--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,19 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link active" href="/write">Post Now</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link active" href="/list">List</a>
           </li>
         </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
       </div>
     </div>
   </nav>
@@ -42,8 +46,8 @@
     <div class="bg-light p-5 rounded">
       <h1>남들 다 하는 TodoApp입니다</h1>
       <p class="lead">평가해주세요</p>
-      <a class="btn btn-lg btn-primary" href="./write" role="button">Post now &raquo;</a>
-      <a class="btn btn-lg btn-primary" href="./list" role="button">Goto List &raquo;</a>
+      <!-- <a class="btn btn-lg btn-primary" href="./write" role="button">Post now &raquo;</a>
+      <a class="btn btn-lg btn-primary" href="./list" role="button">Goto List &raquo;</a> -->
     </div>
   </main>
 
