Added Delete Button

--- a/public/write.html
+++ b/public/write.html
@@ -10,6 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/navbar-top.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <title>Document</title>
 </head>
 
@@ -44,7 +45,7 @@
     <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
 
     <div class="container mt-3">
-        <form action="/add" method="POST" onsubmit="">
+        <form action="/add" method="POST" id="submitForm">
             <div class="form-group">
                 <label>오늘의 할일</label>
                 <input type="text" class="form-control" name="title" id="title">
@@ -54,7 +55,7 @@
     </div>
 
     <script>
-        document.getElementsByTagName("form")[0]?.addEventListener("submit", (e) => {
+        $("#submitForm").on("submit", (e) => {
             let title = document.getElementById("title").value;
             if (!title) {
                 alert("빈칸으로 올리짐마사요");
